# taco-lang

./: Cargo.toml  DOCUMENTATION.md  README.md  index.html  mise.toml  test.sh
aoc-2025/: day1.tc  day2.tc
examples/: list-push.tc.out  record-struct.tc  state.tc  string.tc  string.tc.out
src/: error.rs  eval.rs  ext.rs  fmt.rs  ident.rs  interp.rs  interpolation.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  output_adapter.rs  parser.rs  print_extension.rs  script_type.rs  script_value.rs  type_scope.rs  validate.rs
src/extensions/: fs.rs  mod.rs  print.rs  state.rs  std.rs
src/stdlib/: bitflags.rs  fallible.rs  fs.rs  http.rs  json.rs  list.rs  math.rs  mod.rs  net.rs  opt.rs  panic.rs  parse.rs  pipe.rs  print.rs  process.rs  record.rs  state.rs  string.rs  type_of.rs  with.rs
src/stdlib/http/: tls_stream.rs
src/tests/: interpolation.rs  mod.rs  validation.rs
tests/: aoc-2024.tc  aoc-2025.tc  arithmetic.rs  arithmetic.tc  bitflags.tc  enum.rs  enum.tc  fallible.tc  fs.tc  function.ha  function.ha.out  function.rs  function.tc  function.tc.out  hello.rs  http.tc  if.ha  if.ha.out  if.tc  if.tc.out  if_statement.rs  if_statement.tc  interpolation.rs  interpolation.tc  iteration.rs  iteration.tc  json.tc  list-push.ha  list-push.ha.out  list.ha  list.ha.out  list.rs  list.tc  logic.tc  map.rs  map.tc  match.tc  option.rs  option.tc  parse.rs  (+26 more)
