[package]
name = "taco"
version = "0.1.0"
edition = "2024"

[features]
default = ["fs", "http", "process", "json"]
fs = []
http = ["url", "httparse", "rustls", "webpki-roots"]
process = []
json = ["dep:tinyjson"]

[dependencies]
multipeek = "0.1.2"
smol = { version = "2.0.2" }
tinyjson = { version = "2.5.1", optional = true }
rustls = { version = "0.23.35", features = ["std", "ring"], default-features = false, optional = true }
webpki-roots = { version = "1.0.4", optional = true }
url = { version = "2.5.7", optional = true }
httparse = { version = "*", optional = true }

